# server/openapi_server/models/__init__.py
@@ -11,6 +11,6 @@ from openapi_server.models.text_annotation import TextAnnotation
 from openapi_server.models.text_physical_address_annotation import TextPhysicalAddressAnnotation
 from openapi_server.models.text_physical_address_annotation_all_of import TextPhysicalAddressAnnotationAllOf
 from openapi_server.models.text_physical_address_annotation_request import TextPhysicalAddressAnnotationRequest
-from openapi_server.models.text_physical_address_annotations import TextPhysicalAddressAnnotations
+from openapi_server.models.text_physical_address_annotation_response import TextPhysicalAddressAnnotationResponse
 from openapi_server.models.tool import Tool
 from openapi_server.models.tool_dependencies import ToolDependencies
