# server/openapi_server/models/text_physical_address_annotation_response.py
@@ -11,16 +11,16 @@ from openapi_server import util
 
 from openapi_server.models.text_physical_address_annotation import TextPhysicalAddressAnnotation  # noqa: E501
 
-class TextPhysicalAddressAnnotations(Model):
+class TextPhysicalAddressAnnotationResponse(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, text_physical_address_annotations=None):  # noqa: E501
-        """TextPhysicalAddressAnnotations - a model defined in OpenAPI
+        """TextPhysicalAddressAnnotationResponse - a model defined in OpenAPI
 
-        :param text_physical_address_annotations: The text_physical_address_annotations of this TextPhysicalAddressAnnotations.  # noqa: E501
+        :param text_physical_address_annotations: The text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.  # noqa: E501
         :type text_physical_address_annotations: List[TextPhysicalAddressAnnotation]
         """
         self.openapi_types = {
@@ -34,34 +34,34 @@ class TextPhysicalAddressAnnotations(Model):
         self._text_physical_address_annotations = text_physical_address_annotations
 
     @classmethod
-    def from_dict(cls, dikt) -> 'TextPhysicalAddressAnnotations':
+    def from_dict(cls, dikt) -> 'TextPhysicalAddressAnnotationResponse':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The TextPhysicalAddressAnnotations of this TextPhysicalAddressAnnotations.  # noqa: E501
-        :rtype: TextPhysicalAddressAnnotations
+        :return: The TextPhysicalAddressAnnotationResponse of this TextPhysicalAddressAnnotationResponse.  # noqa: E501
+        :rtype: TextPhysicalAddressAnnotationResponse
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def text_physical_address_annotations(self):
-        """Gets the text_physical_address_annotations of this TextPhysicalAddressAnnotations.
+        """Gets the text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.
 
-        A list of text physical address annotations  # noqa: E501
+        A list of physical address annotations  # noqa: E501
 
-        :return: The text_physical_address_annotations of this TextPhysicalAddressAnnotations.
+        :return: The text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.
         :rtype: List[TextPhysicalAddressAnnotation]
         """
         return self._text_physical_address_annotations
 
     @text_physical_address_annotations.setter
     def text_physical_address_annotations(self, text_physical_address_annotations):
-        """Sets the text_physical_address_annotations of this TextPhysicalAddressAnnotations.
+        """Sets the text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.
 
-        A list of text physical address annotations  # noqa: E501
+        A list of physical address annotations  # noqa: E501
 
-        :param text_physical_address_annotations: The text_physical_address_annotations of this TextPhysicalAddressAnnotations.
+        :param text_physical_address_annotations: The text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.
         :type text_physical_address_annotations: List[TextPhysicalAddressAnnotation]
         """
         if text_physical_address_annotations is None:
